--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,130 @@
 <div class="grid-container">
+    <p>Fields required for input are marked with <span style="color: red">*required</span></p>
+  <mat-card >
+    
+    <mat-card-header>
+      <mat-toolbar  class="header-title">New Customer Sign-Up</mat-toolbar>
+    </mat-card-header>
+    <mat-card-content class="dashboard-card-content" >
+      {{ emailFormControl.value }}
+      <form #userForm="ngForm" (ngSubmit)="signUp()" class="example-form">
+        <div>
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Email: <span style="color: red">(required)</span></mat-label>
+            <input matInput placeholder="Email" [(formControl)]="emailFormControl" >
+            <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+              Please enter a valid email address
+            </mat-error>
+            <!-- <mat-error *ngIf="emailFormControl.hasError('required')">
+              Email is <strong>required</strong>
+            </mat-error> -->
+          </mat-form-field> 
+        </div>
+        <div style="clear:both;"></div>
+        <div class="left">
+          <mat-form-field appearance="outline" class="float-input">
+            <mat-label>First Name:</mat-label>
+            <input matInput placeholder="First Name" name="firstName" [(ngModel)]="firstName">
+          </mat-form-field>
+        </div>
+        <div class="right">
+          <mat-form-field appearance="outline" class="float-input">
+            <mat-label>Last Name:</mat-label>
+            <input matInput placeholder="Last Name" name="lastName" [(ngModel)]="lastName">
+          </mat-form-field>
+        </div>
+        <div style="clear:both;"></div>
+        <div>
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Company Name:</mat-label>
+            <input matInput placeholder="Company Name">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline"   class="full-width required-field">
+            <mat-label>Address: <span style="color: red">(required)</span></mat-label>
+            <input matInput placeholder="Address" required>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="full-width">
+            <mat-label>City: <span style="color: red">(required)</span></mat-label>
+            <input matInput placeholder="City">
+          </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Province: <span style="color: red">(required)</span></mat-label>
+              <input matInput placeholder="Province">
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Postal: <span style="color: red">(required)</span></mat-label>
+              <input matInput placeholder="Postal">
+            </mat-form-field>
+          </div>
+          <div class="left">
+            <mat-form-field appearance="outline" class="float-input">
+              <mat-label>Phone1: <span style="color: red">(required)</span></mat-label>
+              <input matInput placeholder="Phone1">
+            </mat-form-field>
+          </div>
+          <div class="right">
+            <mat-form-field appearance="outline" class="float-input">
+              <mat-select placeholder="Phone1 Type">
+                <mat-option *ngFor="let phoneType of phoneTypes">
+                  {{ phoneType }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div style="clear:both;"></div>
+          <div class="left">
+            <mat-form-field appearance="outline" class="float-input">
+              <mat-label>Phone2:</mat-label>
+              <input matInput placeholder="Phone2">
+            </mat-form-field>
+          </div>
+          <div class="right">
+            <mat-form-field appearance="outline" class="float-input">
+              <mat-select placeholder="Phone2 Type">
+                <mat-option *ngFor="let phoneType of phoneTypes">
+                  {{ phoneType }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div style="clear:both;"></div>
+          <div class="left">
+            <mat-form-field appearance="outline" class="float-input">
+              <mat-label>Phone3:</mat-label>
+              <input matInput placeholder="Phone3">
+            </mat-form-field>
+          </div>
+          <div class="right">
+            <mat-form-field appearance="outline" class="float-input">
+              <mat-select placeholder="Phone3 Type" [(ngModel)]="phone3Type">
+                <mat-option *ngFor="let phoneType of phoneTypes">
+                  {{ phoneType }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        <div style="clear:both;"></div>
+      </form>
+    </mat-card-content>
+  </mat-card>
 
-  <div class="dashboard-card">
+
+  <!-- <div class="dashboard-card">
     <p>Fields required for input are marked with <span style="color: red">*required</span></p>
     <mat-card>
       <mat-card-header>
         <mat-toolbar  class="header-title">New Customer Sign-Up</mat-toolbar>
       </mat-card-header>
       <mat-card-content class="dashboard-card-content">
-        <form #userForm="ngForm">
+        <form #userForm="ngForm" class="example-form">
           <div>
             <p>Email: <span style="color: red">(required)</span></p>
             <input type="email" name="email" ngModel>
@@ -98,6 +215,6 @@
         </form>
       </mat-card-content>
     </mat-card>
-  </div>
+  </div> -->
 </div> 
 
